文档管理增加以图片方式打开

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,20 +9,24 @@
     <title>云落管理</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="./jquery-3.6.0.min.js"></script>
+    <script src="./layer/layer.js"></script>
     <style>
         @font-face {
             font-family: JetBrainsMono;
-        url("https://esion.xyz/assets/JetBrainsMono/web/JetBrainsMono-Medium.woff2") format("woff2"),
-        url("https://esion.xyz/assets/JetBrainsMono/ttf/JetBrainsMono-Medium.ttf") format("truetype");
+            url("https://esion.xyz/assets/JetBrainsMono/web/JetBrainsMono-Medium.woff2") format("woff2"),
+            url("https://esion.xyz/assets/JetBrainsMono/ttf/JetBrainsMono-Medium.ttf") format("truetype");
         }
     </style>
 </head>
+
 <body>
-<noscript>
+    <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
 </noscript>
-<div id="app"></div>
-<!-- built files will be auto injected -->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
 </body>
+
 </html>
